[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "facebook-business>=21.0.5",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "openai>=1.60.0",
    "pillow>=11.1.0",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "google-analytics-data>=0.18.16",
    "xlsxwriter>=3.2.1",
]
